# tropical-wave-tools

./: .gitignore  404.html  MANIFEST.in  Makefile  README.md  environment.yml  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: ci.yml  pages.yml
api/: index.html
api/function-template/: index.html
apps/: streamlit_app.py
blueprint/: index.html
data/local/: README.md
data/samples/: README.md
deployment/: index.html
docs/: blueprint.md  deployment.md  examples.md  getting-started.md  index.md  migration.md  structure.md  user-guide.md
docs/api/: function-template.md  index.md
docs/gallery/: eof-svd-case.md  kelvin-hovmoller-case.md  lead-lag-case.md  multiwave-spatial-case.md  olr-showcase.md  paper-hovmoller-case.md  sample-preview.md  seasonal-trend-case.md  variance-fraction-case.md  wind-diagnostics-case.md  wk-spectrum-case.md
docs/notes/: index.md  method-01-data-standardization.md  method-02-wk-spectrum.md  method-03-wave-filtering.md  method-04-hovmoller-composite.md  method-05-eof-regression.md  method-06-variance-wind-diagnostics.md  research-note-template.md
docs/stylesheets/: extra.css
docs/theory/: index.md  wk-diagnostics.md
examples/: filter_demo.py  index.html  local_wave_atlas.py  olr_showcase.py  wk_spectrum_demo.py
gallery/eof-svd-case/: index.html
gallery/kelvin-hovmoller-case/: index.html
gallery/lead-lag-case/: index.html
gallery/multiwave-spatial-case/: index.html
gallery/olr-showcase/: index.html
gallery/paper-hovmoller-case/: index.html
gallery/sample-preview/: index.html
gallery/seasonal-trend-case/: index.html
gallery/variance-fraction-case/: index.html
gallery/wind-diagnostics-case/: index.html
gallery/wk-spectrum-case/: index.html
getting-started/: index.html
migration/: index.html
notes/: index.html
scripts/: _env.sh  bootstrap_env.sh  build_docs.sh  generate_gallery.py  prepare_sample_data.py  release_pypi.sh  run_app.sh  run_tests.sh  run_tool_module.py  twave.sh
search/: search_index.json
structure/: index.html
stylesheets/: extra.css
tests/: conftest.py  test_atlas.py  test_cli.py  test_cross_spectrum.py  test_diagnostics.py  test_eof.py  test_filters.py  test_io.py  test_io_regressions.py  test_matsuno.py  test_phase.py  test_preprocessing.py  test_spectral.py  test_stats.py
theory/: index.html
user-guide/: index.html
(+26 files in other folders)
