[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "tropical-wave-tools"
version = "0.1.0"
description = "Modernized tropical atmospheric wave analysis toolkit built from the original wave_tools research code."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
authors = [
  { name = "Jianpu" },
]
keywords = [
  "atmospheric-science",
  "climate",
  "equatorial-waves",
  "wheeler-kiladis",
  "xarray",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.11",
  "Topic :: Scientific/Engineering :: Atmospheric Science",
]
dependencies = [
  "joblib>=1.3",
  "matplotlib>=3.8",
  "numpy>=1.24",
  "pandas>=2.0",
  "scipy>=1.11",
  "xarray>=2024.1",
]

[project.optional-dependencies]
dev = [
  "build>=1.2",
  "pytest>=7.1",
  "pytest-cov>=5.0",
  "ruff>=0.4",
  "twine>=5.1",
]
docs = [
  "mkdocs>=1.6",
  "mkdocs-material>=9.5",
  "mkdocstrings[python]>=0.25",
]
app = [
  "streamlit>=1.35",
]
diagnostics = [
  "geocat-comp>=2024.3",
  "metpy>=1.6",
]
advanced = [
  "dask>=2024.1",
  "global-land-mask>=1.0.0",
  "psutil>=5.9",
  "xeofs>=3.0",
]
grid = [
  "healpy>=1.17",
  "numba>=0.59",
  "scikit-image>=0.22",
]

[project.scripts]
tropical-wave-tools = "tropical_wave_tools.cli:main"

[project.urls]
Homepage = "https://github.com/your-name/tropical-wave-tools"
Documentation = "https://your-name.github.io/tropical-wave-tools/"
Repository = "https://github.com/your-name/tropical-wave-tools"
Issues = "https://github.com/your-name/tropical-wave-tools/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/tropical_wave_tools"]
artifacts = ["src/tropical_wave_tools/data/*.nc"]

[tool.hatch.build.targets.sdist]
include = [
  "/src",
  "/tests",
  "/docs",
  "/examples",
  "/scripts",
  "/apps",
  "/README.md",
  "/LICENSE",
  "/mkdocs.yml",
]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = [
  "E",
  "F",
  "I",
  "B",
  "UP",
  "N",
  "C4",
  "SIM",
  "RUF",
]
ignore = [
  "N803",
  "N806",
]

[tool.pytest.ini_options]
minversion = "7.1"
addopts = "-ra"
testpaths = ["tests"]
